--- a/css/style.css
+++ b/css/style.css
@@ -73,13 +73,42 @@ body{
 	transition: box-shadow 0.3s, border 0.3s;
 }
 
-.horizontal-menu .detailRestoranBtnsee {
-    width: 50%;
-    height: 11em;
+.horizontal-menu-fav {
+    white-space: hidden;
+}
+
+.horizontal-menu-fav ons-card {
+    margin-right: 0.1em !important;
+    margin-left: 0 !important;
+    border-radius: 0px !important;
+    padding: 0;
+    width: 15em;
+}
+
+.horizontal-menu-fav .detailFavorite{
+	width: 100%;
+    height: 6.5em;
+	margin: 10px 0 5px 10px;
+	clear:both;
+}
+
+ .horizontal-menu-fav .detailFavorite .img-feature{
+	float:left;
+	width:30%;
+	height:100%;
+	margin-right:10px;
+	border: solid 1px #EEEEEE;
+}
+
+.horizontal-menu-fav .content{
+	float:left;
+	width:50%;
+	height:100%;
 }
 
 .horizontal-menu .content {
     padding: 15px 10px 0 0;
+	margin-top:10px;
 }
 
 .cFormDalam input[type="text"]{
