--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ footer{
 	background-color:white;
 	border-top:1px;
 	float:left;
+	box-shadow: 5px 5px 5px 5px lightgray;
 }
 
 .seeMore{
@@ -216,4 +217,9 @@ footer{
 	padding-top:20px;
 	padding-right:20px;
 	color:#f94d6e;
+}
+
+.detailContent{
+	width:100%;
+	height:auto;
 }
