--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,11 @@ body{
 .horizontal-menu .img-feature {
     width: 100%;
     height: 10em;
+	padding-right:20px;
 }
 
 .horizontal-menu .detailRestoranBtn {
-    width: 50%;
+    width: 200px;
     height: 11em;
 	margin: 10px 0 5px 10px;
 	border: solid 1px #EEEEEE;
@@ -132,21 +133,22 @@ body{
 
 }
 
-.contProfile input[type="text"], .contProfile input[type="password"]{
+.contProfile input[type="text"], .contProfile input[type="password"], .contProfile input[type="date"], .contProfile select{
 	font-family: HNLight;
 	font-size: 1em;
-	width: 90%;
-	height: 30px;
+	width:90%;
+	height: 3em;
 	margin-bottom: 10px;
 	padding: 10px;
 	border: solid 1px #dcdcdc;
 	border-radius: 3px;
 	transition: box-shadow 0.3s, border 0.3s;
-	position:relative;
+	position:absolute;
+	margin-left:20px;
 	left:0px;
 }
 
-.cFormLogin input[type="text"], .cFormLogin input[type="password"] {
+.cFormLogin input[type="text"], .cFormLogin input[type="password"], .cFormLogin input[type="date"], .cFormLogin select{
 	font-family: HNLight;
 	font-size: 1em;
 	width: 18em;
@@ -156,6 +158,11 @@ body{
 	border: solid 1px #dcdcdc;
 	border-radius: 3px;
 	transition: box-shadow 0.3s, border 0.3s;
+}
+
+#cmbGender{
+	font-size:1em;
+	height:2.5em;
 }
 
 form{
