--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
     width: 200px;
     height: 11em;
 	margin: 10px 0 5px 10px;
-	transition: box-shadow 0.3s, border 0.3s;
-}
-
-.gbr{
 	border: solid 1px #EEEEEE;
+	transition: box-shadow 0.3s, border 0.3s;
 }
 
 .horizontal-menu-fav {
@@ -141,9 +138,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
     padding: 15px 10px 0 0;
 	margin-top:10px;
 }
-
 .cFormDalam input[type="text"]{
-	width: 20em;
+	width: 15em;
 	height: 2em;
 	padding: 10px 10px 10px 35px;
 	font-family: HNLight;
@@ -158,12 +154,30 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 	transition: box-shadow 0.3s, border 0.3s;
 	margin-bottom:10px;
 }
+#b1{
+	display: none;
+	width: 4em;
+	height: 2em;
+	font-family: HNLight;
+	font-size: 15px;
+	background-repeat: no-repeat;
+	background-size: 20px;
+	background-position: 5px 5px;
+	background-color: #EEEEEE;
+	border: solid 1px #EEEEEE;
+	border-radius: 5px;
+	transition: box-shadow 0.3s, border 0.3s;
+	margin-bottom:10px;
+}
 .cFormDalam input[type="text"]:focus, #wrapnav input[type="text"].focus{
 	outline: none;
 
 }
+.cFormDalam input[type="text"]:focus ~ #b1{
+	display:inline;
 
-.contProfile input[type="text"], .contProfile input[type="password"], .contProfile input[type="date"], .contProfile input[type="email"],.contProfile select{
+}
+.contProfile input[type="text"], .contProfile input[type="password"], .contProfile input[type="date"], .contProfile select{
 	font-family: HNLight;
 	font-size: 1em;
 	width:90%;
@@ -177,7 +191,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 	margin-left:20px;
 	left:0px;
 }
-.cFormLogin input[type="text"], .cFormLogin input[type="password"], .cFormLogin input[type="date"], .cFormLogin input[type="email"], .cFormLogin select{
+.cFormLogin input[type="text"], .cFormLogin input[type="password"], .cFormLogin input[type="date"], .cFormLogin select{
 	font-family: HNLight;
 	font-size: 1em;
 	width: 18em;
@@ -190,7 +204,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', end
 
 }
 
-#cmbGender, #cmbProvince{
+#cmbGender{
 	font-size:1em;
 	height:3.5em;
 }
@@ -283,6 +297,7 @@ footer{
 	float:right;
 	padding-top:20px;
 	padding-right:20px;
+	color:#f94d6e;
 }
 
 .detailContent{
